# por

./: .env  .gitignore  Makefile  README.md  apt-sequoia.config  docker-compose.yml  other-presents.md  pyproject.toml  raspi.sources  requirements.txt  uv.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
docker/app/: Dockerfile
docker/core/: Dockerfile
docker/mcp/: Dockerfile
istm/llm_agents/: __init__.py  image_describer.py  person_describer.py
istm/multi_agent/: multi_agent.py  schema.py  utils.py
notebooks/01-face-tracker/: 01-face-tracker.ipynb
notebooks/02-multi-agent/: 01-multi-agent.ipynb
notebooks/03-printer/: 01-printer.ipynb  02-printer-luna.ipynb  03-print-state.ipynb
notebooks/04-imagekitio/: 01-imagekitio.ipynb
notebooks/05-process-train-images/: 01-crop-and-resize-images.ipynb  01-crop-images.ipynb  02-image-descriptions.ipynb  02-resize-vk-images.ipynb  03-crop-and-resize-vk-images.ipynb  03-image-descriptions.ipynb  04-vk-image-descriptions.ipynb  05-single-image-description.ipynb
notebooks/06-sensehat-dsp/: 01-sensehat-dsp.ipynb
notebooks/07-rage-collections/: 01-nietzsche-collection.ipynb  02-taylor-swift.ipynb  02-the-art-of-creative-thinking.ipynb  03-libro-rojo.ipynb  04-the-art-of-creative-thinking.ipynb  05-luis-miguel.ipynb  06-lyrics.ipynb  07-satc.ipynb  08-machiavelli.ipynb  08-maquiavelo.ipynb
notebooks/08-servos/: 01-servos.ipynb
notebooks/09-loaders/: 01-image-caption-loader.ipynb  03-lyrics-loader.ipynb  03-ytb-loader.ipynb  04-wiki-loader.ipynb  satc-loader.ipynb
(+356 files in other folders)
